added missing prop to final lessons

--- a/11-transforms-opacity/styles/style.css
+++ b/11-transforms-opacity/styles/style.css
@@ -13,6 +13,8 @@
   --clr-accent-300: hsl(39 94% 57%);
   --clr-accent-400: hsl(39 100% 41%);
 
+  --clr-sale: hsl(350 67% 43%);
+
   --clr-neutral-100: hsl(0 0% 100%);
   --clr-neutral-800: hsl(0 0% 20%);
   --clr-neutral-900: hsl(0 0% 0%);
